# cli-han

./: .env.example  .gitignore  .mcp.json  Anchor.toml  CLAUDE.md  Cargo.toml  HAN_HANDOFF.md  README.md  REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.claude/: settings.json
.claude/agents/: anchor-engineer.md  architect.md  contract-engineer.md  debug-specialist.md  demo-master.md  evm-client-engineer.md  game-engineer.md  hub-engineer.md  qa-engineer.md  runtime-engineer.md  solana-client-engineer.md  summarizer-engineer.md  ui-designer.md
.claude/commands/: avax-flow-test.md  deploy-devnet.md  deploy-fuji.md  game-add.md  plan.md  prep-demo.md  pty-debug.md  review-all.md  ship-feature.md  solana-flow-test.md  stream-test.md
.claude/docs/: architecture.md  figma-spec.md  fue-test-rehberi.md  fuji-test-results.md  mcp-setup.md  prompt-update-guide.md  validation-log.md
.claude/hooks/: post-tool.json  pre-tool.json
apps/hub/: package.json
apps/runtime/: package.json
contracts/: foundry.toml
pitch/: index.html  package-lock.json  package.json
programs/han/: Cargo.toml
programs/han/src/: constants.rs  errors.rs  lib.rs
programs/han/src/instructions/: cancel_game.rs  claim_refund.rs  config.rs  create_game_room.rs  join_game.rs  mod.rs  settle_game.rs  timeout_refund.rs
programs/han/src/state/: config.rs  game_room.rs  mod.rs
scripts/: check-fuji-env.sh  package.json  setup-sas.ts  test-game-escrow.ts  test-mosaic.cjs  test-mosaic.ts  test-tip.ts
sdk/: package.json  tsconfig.json
(+173 files in other folders)
