[package]
name = "han"
version = "0.1.0"
description = "Han game escrow and refund program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "han"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
